# FOSS4GNA-2025-workshop

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Contribute.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: c.instructions.md  general.instructions.md  python.instructions.md  requirements.instructions.md
workshop/: Scripting_with_GRASS.ipynb  grass_tools.py  my_grass_script.py
workshop/addons/: README.md
workshop/examples/r.agent.addon/: Makefile  r.agent.addon.md  r.agent.addon.py
workshop/examples/r.agent.addon/testsuite/: test_r_agent_addon.py
workshop/examples/r.caddon.example/: Makefile  main.c  r.caddon.example.html  r.caddon.example.md
workshop/examples/r.my_test_script/: Makefile  r.my_test_script.md  r.my_test_script.py
workshop/examples/r.my_test_script/testsuite/: conftest.py  test_r_my_test_script.py
workshop/examples/r.myaddon/: Makefile  r.myaddon.html  r.myaddon.md  r.myaddon.py  r_myaddon.ipynb
workshop/part_1_grass/: Scripting_with_GRASS.ipynb  grass_tools.py  my_grass_script.py  my_test_script.py
workshop/part_2_addons/: Addon_Structure.md  Developing_an_addon.md  Intro.md  README.md
workshop/part_3_project/: project.ipynb
workshop/part_3_project/r.simwe.scenario/: Makefile  r.simwe.scenario.html  r.simwe.scenario.md  r.simwe.scenario.py  r_simwe_scenario.ipynb
workshop/part_3_project/r.simwe.scenario2/: Makefile  r.simwe.scenario2.html  r.simwe.scenario2.md  r.simwe.scenario2.py  r_simwe_scenario2.ipynb
(+4 files in other folders)
