[project]
name = "foss4gna-2025-workshop"
version = "0.1.0"
description = "GRASS addon Development with Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipyleaflet>=0.20.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "ipykernel>=7.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
